# Trail

./: AGENTS.md  docker-compose.yml
assist/.codex/: AGENTS.md  config.toml
assist/.codex/skills/echovault/: SKILL.md
assist/app/: config.py
assist/app/ai/: __init__.py  app_return.py  avatar_events.py  avatar_reactions.py  common.py  deepseek_client.py  facts.py  level_up.py  scan_success.py  streak.py  types.py
assist/app/data/: __init__.py  places_dataset.py  types.py
assist/data/: ryazan_places_dataset.json
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  db.py  env.py  main.py  pyproject.toml  ruff.toml
backend/core/: __init__.py  auth.py  deps.py  errors.py  models.py  schemas.py  streaks.py
backend/core/api/: __init__.py  errors.py  schemas.py
backend/core/domain/: __init__.py  codes.py  redemptions.py  rewards.py  routes.py  shared.py  streaks.py
backend/routers/: __init__.py  admin.py  auth.py  codes.py  me.py  prizes.py  redemptions.py  routes.py  scan.py
backend/utils/: payment_processor.py
backend/utils/ai/: __init__.py  client.py  dataset.py  prompts.py  service.py  types.py
frontend/: AGENTS.md  ARCHITECTURE.md  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: index.css
frontend/src/app/: App.tsx  router.tsx
frontend/src/app/layout/: AdminLayout.tsx  AppShell.tsx
frontend/src/pages/activate/: ActivatePointPage.tsx
frontend/src/pages/admin/: AdminCodesPage.tsx  AdminLoginPage.tsx  AdminRedemptionsPage.tsx
frontend/src/pages/auth/: AuthPage.tsx
frontend/src/shared/api/: http.ts
(+57 files in other folders)
