[project]
name = "Trail-backend"
version = "1.0"
authors = [{ name = "rowdyslav", email = "rowdyslav@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]",
    "fastapi-login",
    "pydantic",
    "pydantic-settings",
    "pymongo",
    "beanie",
    "passlib",
    "argon2-cffi",
    "icecream",
]

[dependency-groups]
dev = ["ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pyright]
ignore = ["*"]
